Fragment를 이용해서 mainActivity화면 새로고침을 자연스럽게 변경 SelectedListActivity대신 RoomListActivity를 재활용해서 검색을 통한 화면 변화를 자연스럽게 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,6 @@
     </string-array>
     <string-array name="western">
         <item>파스타</item>
-        <item>스테이크</item>
         <item>필라프</item>
         <item>피자</item>
         <item>치킨</item>
@@ -63,5 +62,7 @@
         <item>담은</item>
         <item>돈까스</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
 
